2013-10-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Write a test suite for trie walk.

	* tests/test_walk.c:
	  - Write test code.

2013-10-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Write a test suite for trie store/retrieval.

	* tests/utils.h, tests/utils.c (+dict_src_n_entries):
	  - Add function to get total entries in dict_src[].
	* tests/test_store-retrieve.c (main):
	  - Write test code.

2013-10-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Fix messages in test_iterator.

	* tests/test_iterator.c (main):
	  - s/file/trie/. No file is written or read in this test.

2013-10-18  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Skip further iteration tests if key is NULL.

	* tests/test_iterator.c (main):
	  - Insert 'continue' if trie_iterator_get_key() returns NULL.

2013-10-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Document availibility of alpha_char_strcmp()

	* datrie/alpha-map.c (alpha_char_strcmp):
	  - Document that it's available since 0.2.7.

2013-10-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Write a test for trie iterator.

	* tests/test_iterator.c:
	  - Write test suite for trie iterator.

2013-10-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add skeleton test suites & a test for file I/O.

	* configure.ac, Makefile.am, +tests/, +tests/Makefile.am:
	  - Add tests/ dir to the build system.
	* +tests/utils.h, +tests/utils.c:
	* +tests/test_file.c:
	* +tests/test_iterator.c:
	* +tests/test_store-retrieve.c:
	* +tests/test_walk.c:
	  - Add skeleton for test suites.
	* tests/utils.h, tests/utils.c, tests/test_file.c:
	  - Write test suite for file I/O.

2013-10-17  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Add alpha_char_strcmp() API.

	* datrie/alpha-map.h, datrie/alpha-map.c (+alpha_char_strcmp):
	  - Add alpha_char_strcmp() declaration & body.
	* datrie/libdatrie.def, datrie/libdatrie.map:
	  - Add alpha_char_strcmp symbols.
